--- a/ProjectIKS/package.json
+++ b/ProjectIKS/package.json
@@ -26,6 +26,7 @@
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
+    "keycloak-js": "^24.0.2",
     "leaflet": "^1.9.4",
     "ng2-charts": "^5.0.0",
     "rxjs": "~7.8.0",
