--- a/ProjectIKS/package.json
+++ b/ProjectIKS/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
+    "ng-recaptcha": "^13.2.1",
     "ng2-charts": "^5.0.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
